# internal/api/oas/oas_operations_gen.go
@@ -33,6 +33,7 @@ const (
 	CreateGeofenceOperation         OperationName = "CreateGeofence"
 	CreateNotificationOperation     OperationName = "CreateNotification"
 	CreateShareOperation            OperationName = "CreateShare"
+	CreateTrailBookmarkOperation    OperationName = "CreateTrailBookmark"
 	DeleteApiKeyOperation           OperationName = "DeleteApiKey"
 	DeleteCalendarOperation         OperationName = "DeleteCalendar"
 	DeleteDeviceOperation           OperationName = "DeleteDevice"
@@ -41,6 +42,7 @@ const (
 	DeletePasskeyOperation          OperationName = "DeletePasskey"
 	DeleteSessionOperation          OperationName = "DeleteSession"
 	DeleteShareOperation            OperationName = "DeleteShare"
+	DeleteTrailBookmarkOperation    OperationName = "DeleteTrailBookmark"
 	EndSudoOperation                OperationName = "EndSudo"
 	GenerateTokenOperation          OperationName = "GenerateToken"
 	GetCommandTypesOperation        OperationName = "GetCommandTypes"
@@ -66,6 +68,7 @@ const (
 	ListPasskeysOperation           OperationName = "ListPasskeys"
 	ListSessionsOperation           OperationName = "ListSessions"
 	ListSharesOperation             OperationName = "ListShares"
+	ListTrailBookmarksOperation     OperationName = "ListTrailBookmarks"
 	LoginOperation                  OperationName = "Login"
 	LogoutOperation                 OperationName = "Logout"
 	LogoutAllOperation              OperationName = "LogoutAll"
@@ -85,4 +88,5 @@ const (
 	UpdateGeofenceOperation         OperationName = "UpdateGeofence"
 	UpdateNotificationOperation     OperationName = "UpdateNotification"
 	UpdateProfileOperation          OperationName = "UpdateProfile"
+	UpdateTrailBookmarkOperation    OperationName = "UpdateTrailBookmark"
 )
