# internal/api/oas/oas_request_encoders_gen.go
@@ -148,6 +148,20 @@ func encodeCreateShareRequest(
 	return nil
 }
 
+func encodeCreateTrailBookmarkRequest(
+	req *TrailBookmarkInput,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeImportGPXRequest(
 	req ImportGPXReq,
 	r *http.Request,
@@ -350,6 +364,20 @@ func encodeUpdateNotificationRequest(
 
 func encodeUpdateProfileRequest(
 	req *UpdateProfileRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
+func encodeUpdateTrailBookmarkRequest(
+	req *TrailBookmarkInput,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
